# provisioning

./: .env.default  .gitignore  Makefile  README.md  inventory.yaml  pyproject.toml  skaffold.yaml
.trunk/: trunk.yaml
charts/dashy/: Chart.yaml  values.yaml
charts/dashy/templates/: configmap.yaml  deployment.yaml  hpa.yaml
metallb/: metallb.yml
src/infrastructure/: calico-bgp.yaml  calicoctl.yaml  helm.yaml  kubernetes.yaml  master.yaml  metallb.yaml  network.yaml  network_calico.yaml  network_flannel.yaml  registry.yaml  teardown.yaml  test-hostnames.yaml  test.yaml  user.yaml  workers.yaml
src/infrastructure/assets/: calico-bgppeer.yaml  calico-custom-resources.yaml  issuer-prod.yaml  issuer-staging.yaml  kube-flannel.yaml  kubelet  metallb-config.yaml  regconfig.json  registry.yml  subnet.env
