[tool.poetry]
name = "provisioning"
version = "0.1.0"
description = ""
authors = ["Stuart Fyfe <stuart@fyfe.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ansible = "^7.1.0"
poetry-dotenv = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
